; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_automount.c_automount_add_trigger_dependencies.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_automount.c_automount_add_trigger_dependencies.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c".mount\00", align 1
@UNIT_BEFORE = common dso_local global i32 0, align 4
@UNIT_TRIGGERS = common dso_local global i32 0, align 4
@UNIT_DEPENDENCY_IMPLICIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @automount_add_trigger_dependencies to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @automount_add_trigger_dependencies(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @assert(i32* %6)
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @UNIT(i32* %8)
  %10 = call i32 @unit_load_related_unit(i32 %9, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32** %4)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* %5, align 4
  store i32 %14, i32* %2, align 4
  br label %23

15:                                               ; preds = %1
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @UNIT(i32* %16)
  %18 = load i32, i32* @UNIT_BEFORE, align 4
  %19 = load i32, i32* @UNIT_TRIGGERS, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* @UNIT_DEPENDENCY_IMPLICIT, align 4
  %22 = call i32 @unit_add_two_dependencies(i32 %17, i32 %18, i32 %19, i32* %20, i32 1, i32 %21)
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %15, %13
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @unit_load_related_unit(i32, i8*, i32**) #1

declare dso_local i32 @UNIT(i32*) #1

declare dso_local i32 @unit_add_two_dependencies(i32, i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
